--- a/src/pages/ListaEspera/styles.css
+++ b/src/pages/ListaEspera/styles.css
@@ -1,4 +1,5 @@
 body {
+    font-family: sans-serif;
     padding: 5%;
     background-image: url('../../assets/background/bg-img-1.png'), url('../../assets/background/bg-img-2.png');
     background-position: right bottom;
