--- a/src/pages/Cadastro/styles.css
+++ b/src/pages/Cadastro/styles.css
@@ -6,14 +6,14 @@
     font-family: 'Nunito', sans-serif;
     src: url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 }
-body {
+/* body {
     font-family: 'Nunito', sans-serif;
     padding: 5%;
     background-image: url('../../assets/background/bg-img-7.png'), url('../../assets/background/bg-img-8.png');
     background-position: right, right;
     background-repeat: no-repeat;
     background-size: auto;
-}
+} */
 
 .cadastro h1 {
     font-weight: 600;
