--- a/src/pages/ListaEspera/styles.css
+++ b/src/pages/ListaEspera/styles.css
@@ -1,12 +1,12 @@
-body {
+/* body {
     font-family: sans-serif;
     padding: 5%;
-    /* background-image: url('../../assets/background/bg-img-1.png'), url('../../assets/background/bg-img-2.png'); */
+    background-image: url('../../assets/background/bg-img-1.png'), url('../../assets/background/bg-img-2.png');
     background-position: right bottom;
     background-repeat: no-repeat;
     background-size: auto;
     
-}
+} */
 
 .lista-espera h1 {
     font-weight: 600;
