adição da pagina de decisão, sua estilização e assets

--- a/src/pages/Cadastro/styles.css
+++ b/src/pages/Cadastro/styles.css
@@ -1,4 +1,4 @@
-:root{
+/* :root{
     --primary: #018762;
     --secudary: #000;
 }
@@ -104,4 +104,4 @@ select {
         margin: 80px auto 0;
     
     }
-}
+} */
