--- a/src/pages/ConfirmacaoPreCadastro/styles.css
+++ b/src/pages/ConfirmacaoPreCadastro/styles.css
@@ -1,4 +1,4 @@
-:root{
+/* :root{
     --primary: #018762;
     --secudary: #000;
 }
@@ -62,4 +62,4 @@ h1,h4,h5{
         body{
             font-size: 24px;
         }
-}
+} */
