--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-
+/* 
 body{
     font-family: sans-serif;
     padding: 5%;
@@ -6,4 +6,4 @@ body{
     background-position: right bottom;
     background-repeat: no-repeat;
     background-size: auto;
-}
+} */
