--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -131,7 +131,7 @@ h2{color:#018762;
     color:#018762;
     border:solid px;
     border-color:#018762;
-    border-radius:8px;
+    border-radius:px;
     margin-left:33px;
     padding:10px 32px;
     box-shadow: 0px 1px 3px rgba(0,0,0,0);
