--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -2,16 +2,183 @@ body{
     margin:0;
     padding:0;
     box-sizing:border-box;
+}
    
 Container{
     margin:0;
     padding:0;
-    width:1366px;
-    height:965px;
+    max-width:1366px;
+    max-height:965px;
     border:1px solid;
     border-color: #CDCDCD;
     
- 
+}
+.col1{
 
 }
+
+.cabecario1{
+    display:flex;
+    text-align:center;
+    width:211.85px;
+    heigth:41.7px;
+    font-family: 'Nunito', sans-serif;
+    font-style:normal;
+    font-weight:700px;
+    font-size:40px;
+    align-items:center;
+    margin-left:102px;
+    margin-top:226px;
+
+}
+
+.formulario1{
+  
+    width:380px;
+    height:48px;
+    margin-top:38px;
+    margin-left:117px;
+    padding:12px 12px 12px 16px:
+
+
+}
+.mb-3{
+  padding-bottom:0px;
+}
+
+.textocabeca{
+    display:flex;
+    /* position:absolute; */
+    width:135.69px;
+    heigth:21.88px;
+    font-family: 'Nunito', sans-serif;
+    /* font-style:normal; */
+    font-weight:bold;
+    color:#1F1F1F;
+    font-size:18px;
+    padding-left:0px;
+    margin-top:24px;
+    margin-bottom:10px;
+    align-items:center;
+    }
+
+.caixa{
+    width: 369px;
+    height: 48px;
+    border-radius:8px;
+    border:1px solid #515151;
+    padding-left:16px;
+    font-size:16px;
+}
+
+.cabecario2{
+    position:absolute;
+    width:314.57px;
+    heigth:51.25px;
+    font-family: 'Nunito', sans-serif;
+    font-style:normal;
+    font-weight:700px;
+    color:white;
+    font-size:40px;
+    padding-left:1100.21px;
+    margin-top:65px;
+    align-items:center;
+
+}
+.paragrafo2{
+    position:absolute;
+    width:401px;
+    heigth:41px;
+    font-family: 'Nunito', sans-serif;
+    font-style:normal;
+    font-weight:400px;
+    color:white;
+    font-size:18px;
+    padding-left:990px;
+    margin-top:135px;
+    align-items:center;
+}
+
+.btn-direito{
+    position:absolute;
+    width:100px;
+    height:48px;
+    margin-top:250px;
+    margin-left:1065px;
+    text-decoration:none;
+    color:#018762;
+    background:white;
+    text-align:center;
+    font-family: 'Nunito', sans-serif;
+    font-style:normal;
+    font-weight:700px;
+    font-size: 40px;
+    border-style:groove;
+    border-width:2px;
+    border-radius:8px;
+    padding:0px 32px;
+  
+}
+.btn-esquerdo{
+    display:flex;
+    flex-decoration:row;
+    justify content:center;
+    align-items:center;
+    position:absolute;
+    width:70px;
+    height:48px;
+    margin-top:40px;
+    margin-left:130px;
+    text-decoration:none;
+    text-align:center;
+    align-items:center;
+    color:#fff;
+    background:#018762;
+    text-align:center;
+    font-family: 'Nunito', sans-serif;
+    font-style:normal;
+    font-weight:700px;
+    font-size: 40px;
+    border-width:2px;
+    border-radius:8px;
+    padding-left:16px;
+    padding-right:32px;
+    box-shadow:0px 1px 3px rgba(0,0,0,0,1);
+}
+
+.paragrafo3{
+    position:absolute;
+    width:222px;
+    heigth:27px;
+    font-family: 'Nunito', sans-serif;
+    font-style:normal;
+    font-weight:400px;
+    color:#2D2D2D;
+    font-size:18px;
+    margin-left:185px; 
+    margin-top:350px;
+    align-items:center;
+
+}
+
+.ellipse2{
+    position:absolute;
+    width:1280.96px;
+    height:1265.59px;
+    margin-left:780px;
+    margin-top:-169.9px;
+    
+}
+
+
+.mocapc{
+    position:absolute;
+    width:693.93px;
+    height:422.24px;
+    margin-top:443.98px;
+    margin-left:750.55px;
+    
+}
+    
+
 
